fixed poor wrapping cards

--- a/components/ContentContainer/ui/ContentContainer.module.css
+++ b/components/ContentContainer/ui/ContentContainer.module.css
@@ -8,8 +8,7 @@
 .grid > * {
     min-width: 360px;
     max-width: 512px;
-    flex-grow: 1;
-    flex-basis: 0;
+    flex-basis: calc(33.33% - 2%);
     margin: 1%;
 }
 
